--- a/import-braintree.html
+++ b/import-braintree.html
@@ -1,1 +1,1 @@
-<script src="../../bower_components/braintree-web/dist/braintree.js"></script>
+<script src="../braintree-web/dist/braintree.js"></script>
